<resources>
    <string name="app_name">Price Recorder</string>
    <string name="add_product_string">Agregar</string>
    <string name="accept_button_string">Aceptar</string>
    <string name="cancel_button_string">Cancelar</string>
    <string name="place_hint">Lugar</string>
    <string name="price_hint" translatable="false">$500.0</string>
    <string name="description_string">Descripcion</string>
    <string name="delete_all_dialog_title">Eliminar todos los elementos?</string>
    <string name="delete_all_dialog_msg">Una vez eliminados no podran recuperarse</string>
    <string name="button_cancel_string">Cancelar</string>
    <string name="button_accept_string">Aceptar</string>
    <string name="delete_success_msg">%1$s eliminado correctamente</string>
    <string name="new_product_added">%1$s agregado</string>
    <string name="add_fragment_title">Nuevo Producto</string>
    <string name="product_deleted_msg">Producto eliminado</string>
    <string name="undo_action_msg">Deshacer</string>
    <string name="category_input_string">Categoria</string>
    <string name="current_price_string">Precio al %1$s</string>
    <string name="delete_product_string">Eliminar producto?</string>
    <string name="delete_product_dialog_msg">Una vez eliminado no podra ser recuperado</string>
    <string name="price_updated_msg">Precio actualizado</string>
    <string name="add_price_dialog_title">Ingrese el nuevo precio</string>
    <string name="edit_fragment_title">Editar Producto</string>
    <string name="search_view_hint">Buscar</string>
    <string name="delete_all_menu_option">Eliminar todos</string>
    <string name="helper_text_optional">Opcional</string>
    <string name="no_elements_string">Nada por aquí!</string>
    <string name="camera_access_error">No es posible acceder a la camara</string>
    <string name="add_image_dialog_title">Agregar foto</string>
    <string name="delete_image_button_text">Eliminar Foto</string>
    <string name="image_deleted_success">Imagen eliminada</string>
    <string name="product_updated_string">%1$s actualizado</string>
    <string name="option_uncategorized">Sin categoria</string>
    <string name="filter_dialog_title">Filtrar Productos</string>
    <string name="category_label">Categoria</string>
    <string name="purchase_place_label">Lugar de compra</string>
    <string name="switch_date">Fecha</string>
    <string name="filter_by_string">Filtros</string>
    <string name="date_filter_text">Fecha</string>
    <string name="date_picker_title">Elegir fecha</string>
    <string name="setting_fragment_title">Ajustes</string>
    <string name="sign_in_string">Ingresar</string>
    <string name="sign_in_description">Iniciar sesion con Google</string>
    <string name="export_data_string">Exportar datos</string>
    <string name="last_export_date">Ultimo backup: %1$s</string>
    <string name="no_backups_found_msg">No se encontraron copias de seguridad</string>
    <string name="import_data_string">Importar datos</string>
    <string name="version_title_string">Version</string>
    <string name="help_and_faq_string">Ayuda y FAQs</string>
    <string name="about_title_string">Acerca de</string>
    <string name="review_app_string">Valora esta aplicacion</string>
    <string name="privacy_policy_section_title">Politica de privacidad</string>
    <string name="account_section_title">Cuenta</string>
    <string name="general_section_title">General</string>
    <string name="db_section_title">Backup y restauración</string>
    <string name="screen_section_title">Pantalla</string>
    <string name="info_section_title">Informacion</string>
    <string name="account_created_string">Cuenta creada %1$s</string>
    <string name="logged_in_successfully">Bienvenido %1$s!</string>
    <string name="log_out_title_string">Cerrar sesion</string>
    <string name="sign_in_error_message">Ha habido un error. Intentelo nuevamente.</string>
    <string name="sign_in_to_enable_functions_string">Inicie sesión para habilitar función de backup y restauración en la nube.</string>
    <string name="database_backup_error_msg">Error en la base de datos. Intente nuevamente.</string>
    <string name="no_internet_signal_msg">Sin conexion a internet</string>
    <string name="backup_dialog_title">Copia de seguridad</string>
    <string name="cloud_backup_option">Subir a la nube</string>
    <string name="restore_successful_msg">Restauración exitosa</string>
    <string name="restore_data_description">Restaura tu datos de una copia de seguridad creada anteriormente</string>
    <string name="theme_setting_option">Tema</string>
    <string name="no_results_found_desc">Sin resultados :(</string>
    <string name="add_img_dialog_take_picture">Tomar foto</string>
    <string name="add_img_dialog_pick_from_gallery">Elegir de galeria</string>
    <string name="optional_helper_text">Opcional</string>
    <string name="product_quantity_label">Cantidad</string>
    <string name="product_size_label">Peso/Tamaño</string>
    <string name="button_apply_label">Aplicar</string>
    <string name="product_already_exists_msg">El producto ingresado ya existe</string>
    <string name="select_theme_title">Elige un tema</string>

    <string name="product_category_edibles">Comestibles</string>
    <string name="product_category_cleaning">Limpieza</string>
    <string name="product_category_home">Hogar</string>
    <string name="product_category_drinks">Bebidas</string>
    <string name="product_category_pets">Mascotas</string>
    <string name="product_category_gardening">Jardineria</string>
    <string name="product_category_self_care">Cuidado Personal</string>
    <string name="product_category_greengrocery">Verduleria</string>
    <string name="product_category_dairy">Lacteos</string>
    <string name="product_category_bakery">Panaderia</string>
    <string name="product_category_tech">Tecnologia</string>
    <string name="product_category_perfumery">Perfumeria</string>

    <string name="upload_notification_success_text">Copia subida exitosamente</string>
    <string name="uploading_in_progress_msg">Subiendo</string>
    <string name="percentage_uploaded_msg">%1$s subido</string>
    <string name="upload_notification_failed_text">Ha ocurrido un error durante la operacion</string>
    <string name="downloading_in_progress_title">Descargando copia de seguridad…</string>
    <string name="download_notification_title">Descargando</string>
    <string name="download_notification_success_text">Descarga realizada correctamente</string>
    <string name="download_notification_failed_text">Descarga fallida</string>

    <string name="up_button_description">Navegar atras</string>
    <string name="overflow_menu_description">Menu desplegable</string>
    <string name="update_price_button_desc">Modificar precio</string>
    <string name="share_product_button_desc">Compartir producto</string>
    <string name="modified_date_desc">Modificado</string>
    <string name="price_label">Precio</string>
    <string name="close_icon_desc">Cerrar</string>
    <string name="delete_all_success_msg">Productos eliminados</string>
    <string name="google_sign_in_button_text">Acceder</string>
    <string name="scan_barcode_prompt">Escanear Codigo</string>
    <string name="product_barcode_label">Codigo de barras</string>
    
    <string name="dark_theme_string">Oscuro</string>
    <string name="light_theme_string">Claro</string>
    <string name="system_default_theme_string">Predeterminado del sistema</string>

    <string-array name="range_slider_values">
        <item>20</item>
        <item>80</item>
    </string-array>
</resources>