<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_xbig"
            android:layout_marginRight="@dimen/spacing_xbig"
            app:cardElevation="10dp"
            app:cardCornerRadius="6dp"
            app:cardPreventCornerOverlap="false"
            app:strokeColor="?attr/colorSecondary"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/dialog_title"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/add_price_dialog_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/add_price_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/price_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_title"
                    android:layout_marginLeft="@dimen/spacing_big"
                    android:layout_marginRight="@dimen/spacing_big"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:alpha="0.7"
                    android:enabled="false"
                    android:text="@string/accept_button_string"
                    android:textColor="@color/white"
                    app:backgroundTint="?attr/colorSecondary"
                    app:icon="@drawable/ic_add_task"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_price_edittext" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>