<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.pricerecorder.addFragment.AddFragmentViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_product_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_add_photo_alternate"
                android:layout_margin="@dimen/spacing_xbig"
                android:src="@drawable/ic_add_photo_alternate"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:layout_marginStart="@dimen/spacing_xbig"
                android:layout_marginEnd="@dimen/spacing_xbig"
                android:layout_marginLeft="@dimen/spacing_xbig"
                android:layout_marginRight="@dimen/spacing_xbig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_product_image"
                app:startIconDrawable="@drawable/ic_description"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/description_string"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_xbig"
                android:layout_marginEnd="@dimen/spacing_xbig"
                android:layout_marginLeft="@dimen/spacing_xbig"
                android:layout_marginRight="@dimen/spacing_xbig"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_input"
                app:startIconDrawable="@drawable/ic_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/place_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/place_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/price_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_input"
                android:singleLine="true"
                android:hint="@string/price_hint"
                android:maxLength="9"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                android:gravity="center_horizontal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xbig"
                android:alpha="0.7"
                android:enabled="false"
                android:text="@string/accept_button_string"
                android:textColor="@color/white"
                app:backgroundTint="?attr/colorSecondary"
                app:icon="@drawable/ic_add_task"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/price_editText"
                app:layout_constraintStart_toStartOf="@+id/price_editText"
                app:layout_constraintTop_toBottomOf="@+id/price_editText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>